--- a/checkout.html
+++ b/checkout.html
@@ -6,88 +6,158 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- font awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/checkout.css">
-    <title>Checkout Page</title>
+    <title>ShopNow.com - Checkout Page</title>
 </head>
 
 <body>
-    <!-- header -->
-    <h1 class="text-center head m-4">Checkout Page</h1>
-    <!-- header -->
-    <!-- icons starts here -->
-    <div class="icons">
-        <div class="row mr-0">
-            <div class="col-sm-6">
-                <h2 class="my-3 mx-5 bord shadow"><i class="fas fa-dollar-sign bg p-4 mr-4"></i>Cash on Delivery</h2>
+
+
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">ShopNow</a>
+
+        <div class="collapse navbar-collapse " id="navbarTogglerDemo03">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="shop.html#grocery">Grocery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="shop.html#beauty">Beauty</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="shop.html#clothes">Clothes</a>
+                </li>
+            </ul>
+
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+            <a class="nav-link text-white btn" id="cart" type="button" data-toggle="modal" data-target="#cartModal" onClick="printCart()" href="#"><i class="fas fa-cart-arrow-down"></i>
+                My Cart
+            </a>
+
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="text-center mt-3 m-5">Checkout Page</h1>
             </div>
-            <div class="col-sm-6 ">
-                <h2 class="my-3 mx-5 bord shadow"><i class="fas fa-arrows-alt-h bg p-4 mr-4"></i>100% Return</h2>
+        </div>
+    </div>
+
+
+
+    <!-- icons starts here -->
+    <div class="container mb-5">
+        <div class="row">
+            <div class="col-12 col-sm-6">
+                <h2 class="t-t4 bord shadow"><i class="fas fa-dollar-sign bg p-4 mr-4"></i>Cash on Delivery</h2>
+            </div>
+            <div class="col-12 col-sm-6 ">
+                <h2 class="t-t4 bord shadow"><i class="fas fa-arrows-alt-h bg p-4 mr-4"></i>100% Return</h2>
             </div>
         </div>
 
-        <div class="row mr-0">
-            <div class="col-sm-6">
-                <h2 class="my-3 mx-5 bord shadow"><i class="far fa-thumbs-up bg p-4 mr-4"></i>Quality Assured</h2>
+        <div class="row">
+            <div class="col-12 col-sm-6">
+                <h2 class="t-t4 bord shadow"><i class="far fa-thumbs-up bg p-4 mr-4"></i>Quality Assured</h2>
             </div>
-            <div class="col-sm-6 ">
-                <h2 class="my-3 mx-5 bord shadow"><i class="fas fa-stopwatch bg p-4 mr-4"></i>Delivery on time</h2>
+            <div class="col-12 col-sm-6 ">
+                <h2 class="t-t4 bord shadow"><i class="fas fa-stopwatch bg p-4 mr-4"></i>Delivery on time</h2>
             </div>
         </div>
     </div>
     <!-- icons end here -->
-    <!-- Checkout starts here -->
-    <form class="form">
-        <div class="row bord p-5 shadow m-5">
-            <div class="col-sm-6">
-                <div class="mt-3 row">
-                    <h5 class="my-auto">First Name :</h5>
-                    <input class="ml-3 name input rounded p-2" type="text" placeholder="First Name" />
-                    <p id="errorName">Numbers in the name are not valid</p>
+
+
+    <div class="container mb-5 formBuy">
+        <div class="row shadow">
+            <div class="col-12 pt-4 pb-4">
+
+                <div class="row">
+
+                    <div class="col-12 pb-4">
+                        <p class="small"><sup>*</sup>field required</p>
+                    </div>
+
+                    <div class="col-12">
+
+                        <form class="form row justify-content-around formCheck">
+
+                            <div class="col-12 col-md-6 mt-2 mb-3 row justify-content-between" id="groupName">
+                                <h5 class="t-t5">First Name :<sup>*</sup></h5>
+                                <input id="name" class="input rounded p-2" type="text" placeholder="First Name" required minlength="3" />
+                                <p class="errorField">Numbers in the name are not valid or minium length 3</p>
+                            </div>
+
+                            <div class="col-12 col-md-6 mt-2 mb-3 row justify-content-between" id="groupLastName">
+                                <h5 class="t-t5">Last Name :<sup>*</sup></h5>
+                                <input id="lastName" class="input rounded p-2" type="text" placeholder="Last Name" required minlength="3" />
+                                <p class="errorField">Numbers in the last name are not valid or minium length 3</p>
+                            </div>
+
+                            <div class="col-12 col-md-6 mt-2 mb-3 row justify-content-between" id="groupMail">
+                                <h5 class="t-t5">Email :<sup>*</sup></h5>
+                                <input id="email" class="input rounded p-2" type="email" placeholder="Email" required minlength="3" />
+                                <p class="errorField">Not valid mail</p>
+                            </div>
+
+                            <div class="col-12 col-md-6 mt-2 mb-3 row justify-content-between" id="groupPassword">
+                                <h5 class="t-t5">Password :<sup>*</sup></h5>
+                                <input id="password" class="input rounded p-2" title="(4-8 characters)" type="password" minlength="3" maxlength="8" placeholder="Password" required />
+                                <p class="errorField">Enter a correct password, only num and characters.</p>
+                            </div>
+
+                            <div class="col-12 col-md-6 mt-2 mb-3 row justify-content-between" id="groupAdress">
+                                <h5 class="t-t5">Address :<sup>*</sup></h5>
+                                <input id="adress" class="input rounded p-2" type="text" placeholder="Address" required minlength="3" />
+                                <p class="errorField">Not valid adress</p>
+                            </div>
+
+                            <div class="col-12 col-md-6 mt-2 mb-3 row justify-content-between" id="groupPhone">
+                                <h5 class="t-t5">Phone Number :<sup>*</sup></h5>
+                                <input id="phone" class="input rounded p-2" type="number" placeholder="Phone No." required minlength="3" />
+                                <p class="errorField">Invalid phone number</p>
+                            </div>
+
+
+                            <div class="col-12 mt-2 mb-2 final text-right">
+                                <button type="submit" id="btn" class="p-2 px-4 btn btn-primary shadow-lg" onclick="validate(event);">
+                                    <i class="fas fa-cart-arrow-down p-2"></i>Buy</button>
+                            </div>
+
+                        </form>
+                    </div>
+
                 </div>
-                <div class="mt-3 row ">
-                    <h5 class="my-auto">Email :</h5>
-                    <input class="ml-3 input rounded p-2" type="email" placeholder="Email" />
-                </div>
-                <div class="mt-3 row ">
-                    <h5 class="my-auto">Address :</h5>
-                    <input class="ml-3 input rounded p-2" type="text" placeholder="Address" />
-                </div>
+
+
             </div>
-            <div class="col-sm-6">
-                <div class="mt-3 row">
-                    <h5 class="my-auto name my-auto">Last Name :</h5>
-                    <input class="ml-3 input rounded p-2" type="text" placeholder="Last Name" />
-                </div>
-                <div class="mt-3 row">
-                    <h5 class="my-auto my-auto">Password :</h5>
-                    <input class="ml-3 input password rounded p-2" title="(4-8 characters)" type="password" minlength="4"
-                        maxlength="8" placeholder="Password" />
-                    <p id="errorPassword">Enter a correct password</p>
-                </div>
-                <div class="mt-3 row">
-                    <h5 class="my-auto my-auto">Phone Number :</h5>
-                    <input class="ml-3 phone input rounded p-2" type="number" placeholder="Phone No." />
-                    <p id="errorPhone">Invalid phone number!!</p>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container-fluid pt-3 pb-3">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <p class="text-center small">sertomorales.com &#169; 2021/2022</p>
                 </div>
             </div>
         </div>
+    </footer>
 
-
-        <!-- Checkout ends here -->
-        <!-- Buy button -->
-        <div class="m-5 final text-right">
-            <button type="submit" id="btn" class="p-2 px-4 btn btn-primary shadow-lg" onclick="validate()"><i
-                    class="fas fa-cart-arrow-down p-2"></i>Buy</button>
-        </div>
-    </form>
-    <!-- Buy Button -->
     <!-- script tags -->
     <script src="js/checkout.js"></script>
 
