--- a/index.html
+++ b/index.html
@@ -7,41 +7,149 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- font awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>ShopNow</title>
+    <title>ShopNow.com</title>
 </head>
 
 <body>
-    <!-- header -->
-    <header class="m-5">
-        <h1 class="text-center m-5"><i class="fas fa-shopping-cart mr-2"></i> ShopNow</h1>
-        <h3 class="text-center m-3">Welcome to your Online Shopping Store.</h3>
-    </header>
 
-    <!-- Buttons -->
-    <h3 class="text-center">Select your category:</h3>
-    <div class="text-center">
-        <button type="button" onclick="window.location.href = 'shop.html#grocery';" class="btn m-4 mt-5 btn btn-primary">Grocery</button>
-        <button type="button" onclick="window.location.href = 'shop.html#beauty';" class="btn m-4 mt-5 btn btn-primary">Beauty</button>
-        <button type="button" onclick="window.location.href = 'shop.html#clothes';" class="btn m-4 mt-5 btn btn-primary">Clothes</button>
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">ShopNow</a>
+
+        <div class="collapse navbar-collapse " id="navbarTogglerDemo03">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="shop.html#grocery">Grocery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="shop.html#beauty">Beauty</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="shop.html#clothes">Clothes</a>
+                </li>
+            </ul>
+
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+            <a class="nav-link text-white btn" id="cart" type="button" data-toggle="modal" data-target="#cartModal" onClick="printCart()" href="#"><i class="fas fa-cart-arrow-down"></i>
+                My Cart
+            </a>
+
+        </div>
+    </nav>
+
+
+    <div class="container-fluid imgHome">
+        <div class="row justify-content-center">
+            <div class="col-8 col-md-6 claimHome">
+                <h1 class="t-t1"><i class="fas fa-shopping-cart mr-2"></i> ShopNow</h1>
+                <h2 class="t-t2 m-3">Welcome to your Online Shopping Store.</h2>
+            </div>
+        </div>
     </div>
 
+    <div class="container-fluid">
+        <div class="row pt-5 pb-5 mt-4 mb-4 justify-content-around">
+
+            <div class="col-10 col-md-12">
+
+                <h3 class="t-t3 mb-5 text-uppercase">Select your category</h3>
+
+                <div class="row justify-content-around">
+
+                    <div class="card col-12 col-md-3">
+                        <img class="card-img-top" src="images/grocery.jpg" alt="grocery">
+                        <div class="card-body d-flex flex-column justify-content-center">
+                            <h5 class="card-title">Grocery</h5>
+                            <a href="shop.html#grocery" class="btn btn-primary">Go to buy</a>
+                        </div>
+                    </div>
+
+                    <div class="card col-12 col-md-3">
+                        <img class="card-img-top" src="images/beauty.jpg" alt="grocery">
+                        <div class="card-body d-flex flex-column justify-content-center">
+                            <h5 class="card-title">Beauty</h5>
+                            <a href="shop.html#beauty" class="btn btn-primary">Go to buy</a>
+                        </div>
+                    </div>
+
+                    <div class="card col-12 col-md-3">
+                        <img class="card-img-top" src="images/clothes.jpg" alt="grocery">
+                        <div class="card-body d-flex flex-column justify-content-center">
+                            <h5 class="card-title">Clothes</h5>
+                            <a href="shop.html#clothes" class="btn btn-primary">Go to buy</a>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container-fluid pt-3 pb-3">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <p class="text-center small">sertomorales.com &#169; 2021/2022</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+    <!-- modal -->
+    <aside>
+        <div class="modal fade" id="cartModal" tabindex="-1" role="dialog" aria-labelledby="cartModalTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="cartModalScrollableTitle"><i class="fas fa-cart-arrow-down"></i>My Cart</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+                    </div>
+                    <div class="modal-body">
+                        <!-- listing items starts -->
+                        <div>
+                            <ul class="list" id="listCar">
+
+                            </ul>
+                            <p id="totalCart"></p>
+                            <div class="textEmptyCart" id="textEmptyCart">
+                                <h3 class="text-center bill px-5">Select Something</h3>
+                            </div>
+                            <div class="text-center">
+                                <a href="checkout.html" class="btn btn-primary m-3">Checkout</a>
+                            </div>
+                        </div>
+                        <!-- listing items ends -->
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </aside>
+
     <!-- script tags -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
+    <script src="js/shop.js"></script>
 </body>
 
 </html>
